--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <body style="overflow: hidden;">
-    <webview id="gmp-player" src="https://play.google.com/music/" style="width: 100%; height: 100%; position :absolute;"></webview>
+  <link rel="stylesheet" href="./css/main.css" />
+  <body>
+    <webview id="gmp-player" src="https://play.google.com/music/" style=""></webview>
   <script src="./js/app.js"></script>
   </body>
 </html>
