--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <body style="overflow: hidden;">
+  <body style="overflow: hidden; margin: 0;">
     <webview id="gmp-player" src="https://play.google.com/music/" style="width: 100%; height: 100%; position :absolute;"></webview>
   <script src="./js/app.js"></script>
   </body>
