--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./css/main.css" />
   <body>
-    <webview id="gmp-player" src="https://play.google.com/music/"></webview>
-  <script src="./js/app.js"></script>
+    <webview id="gpm-player" src="https://play.google.com/music/"></webview>
+    <script src="./js/app.js"></script>
   </body>
 </html>
